# cpoc2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  r_main.cpp  r_main.h  r_text.h
